--- a/index.html
+++ b/index.html
@@ -75,15 +75,17 @@ img {
 		
 		 <table border ='5' class='center'>
 			<tr>
-				<td><a href='html/ballena.html'><img 					src='figuras/ballena.jpg'alt='ballena'				 					style ='width:350px;height:250px'><figcaption style = 					'text_align:center'>Ballena</figcaption></td>
-				<td><a href='html/ballenajorobada.html'><img 					src='figuras/ballenajorobada.jpg' alt='ballenajorobada' style= 					'width:350px;height:250px'><figcaption style = 					'text_align:center'>Ballena Jorobada</figcaption></td>
-				<td><a href='html/delfin.html'><img src='figuras/delfin.jpg' 					alt='delfin' style ='width:350px;height:250px'><figcaption style = 					'text_align:center'>Delfín</figcaption></td>
-			</tr>
+				<td><a href='html/paris.html'><img src='figuras/paris.jpg'alt='paris'style ='width:350px;height:250px'><figcaption style ='text_align:center'>París</figcaption></td>
+				<td><a href='html/islasfiji.html'><img src='figuras/islasfiji.jpg' alt='islasfiji' style= 'width:350px;height:250px'><figcaption style = 'text_align:center'>Islas Fiji</figcaption></td>
+				<td><a href='html/nuevayork.html'><img src='figuras/newyork.jpg'alt='nuevayork' style ='width:350px;height:250px'><figcaption style = 'text_align:center'>Nueva York</figcaption></td>
+				<td><a href='html/islasvirgenes.html'><img src='figuras/lasislasvirgenes.jpg'alt='lasislasvirgenes' style ='width:350px;height:250px'><figcaption style = 'text_align:center'>Las Islas Vírgenes</figcaption></td>
+			 </tr>
 			<tr>
-				<td><a href='html/narval.html'><img src='figuras/narval.png' 					alt='google' style = 'width:350px;height:250px'><figcaption 					style = 'text_align:center'>Narval</figcaption></td>
-				<td><a href='html/delfinderio.html'><img 					src='figuras/delfinderio.jpeg' alt='google' style = 					'width:350px;height:250px'><figcaption style = 					'text_align:center'>Delfín De Río</figcaption></td>
-				<td><a href='html/orca.html'><img src='figuras/orca.jpg' 					alt='google' style = 'width:350px;height:250px'><figcaption style 					='text_align:center'>Orca</figcaption></td>
-			</tr>
+				<td><a href='html/borabora.html'><img src='figuras/borabora.jpg' alt='borabora' style = 'width:350px;height:250px'><figcaption style = 'text_align:center'>Bora Bora</figcaption></td>
+				<td><a href='html/islasseychelles.html'><img src='figuras/islasseychelles.jpeg' alt='islasseychelles' style = 'width:350px;height:250px'><figcaption style = 'text_align:center'>Islas Seychelles</figcaption></td>
+				<td><a href='html/latoscana.html'><img src='figuras/latoscana.jpg'alt='latoscana' style = 'width:350px;height:250px'><figcaption style ='text_align:center'>La Toscana</figcaption></td>
+				<td><a href='html/dubai.html'><img src='figuras/dubai.jpg'alt='dubai' style ='width:350px;height:250px'><figcaption style = 'text_align:center'>Dubai</figcaption></td>
+			 </tr>
 		</table>
 
 
