--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ img {
 				<td><a href='html/paris.html'><img src='figuras/paris.jpg'alt='paris'style ='width:350px;height:250px'><figcaption style ='text_align:center'>París</figcaption></td>
 				<td><a href='html/islasfiji.html'><img src='figuras/islasfiji.jpg' alt='islasfiji' style= 'width:350px;height:250px'><figcaption style = 'text_align:center'>Islas Fiji</figcaption></td>
 				<td><a href='html/nuevayork.html'><img src='figuras/newyork.jpg'alt='nuevayork' style ='width:350px;height:250px'><figcaption style = 'text_align:center'>Nueva York</figcaption></td>
-				<td><a href='html/islasvirgenes.html'><img src='figuras/lasislasvirgenes.jpg'alt='lasislasvirgenes' style ='width:350px;height:250px'><figcaption style = 'text_align:center'>Las Islas Vírgenes</figcaption></td>
+				<  td  ><  a   href = 'html/islasvirgenes.html'  ><  img   src = 'figuras/lasislasvirgenes.jpeg'  alt = 'lasislasvirgenes'   style = 'width:350px;height:250px'  ><  figcaption   style = 'text_align: center'  > Las Islas Vírgenes </  figcaption  ></  td  >
 			 </tr>
 			<tr>
 				<td><a href='html/borabora.html'><img src='figuras/borabora.jpg' alt='borabora' style = 'width:350px;height:250px'><figcaption style = 'text_align:center'>Bora Bora</figcaption></td>
