--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@ img {
 			 </tr>
 			<tr>
 				<td><a href='html/borabora.html'><img src='figuras/borabora.jpg' alt='borabora' style = 'width:350px;height:250px'><figcaption style = 'text_align:center'>Bora Bora</figcaption></td>
-				<td><a href='html/islasseychelles.html'><img src='figuras/i
-islasseychelles.jpg ' alt='islasseychelles' style = 'width:350px;height:250px'><figcaption style = 'text_align:center'>Islas Seychelles</figcaption></td>
+				<td><a href='html/islasseychelles.html'><img src='figuras/islasseychelles.jpg ' alt='islasseychelles' style = 'width:350px;height:250px'><figcaption style = 'text_align:center'>Islas Seychelles</figcaption></td>
 				<td><a href='html/latoscana.html'><img src='figuras/latoscana.jpg'alt='latoscana' style = 'width:350px;height:250px'><figcaption style ='text_align:center'>La Toscana</figcaption></td>
 				<td><a href='html/dubai.html'><img src='figuras/dubai.jpg'alt='dubai' style ='width:350px;height:250px'><figcaption style = 'text_align:center'>Dubai</figcaption></td>
 			 </tr>
