--- a/html/paris.html
+++ b/html/paris.html
@@ -1,1 +1,42 @@
+<!DOCTYPEhtml >
+< html >
+	< cabeza >
+		< título >
+		París
+		</ título >
+		< juego de caracteres meta  = ' utf-8 ' >
+		< enlace  rel =' hoja de estilo ' tipo = ' texto/css ' href =' ../css/estilos.css ' media =' pantalla ' >
+		
+		
+	</ cabeza >
+	
+	< cuerpo > 
+		< h1 > Ballena jorobada </ h1 >h
+		< br >
+< img  src =' ../figuras/ballenajorobada.jpg ' alt =' Ballena Jorobada '   class = center  style = ' width:350px;height:250px ' 
+< p > < centro > Megaptera novaeangliae </ centro > </ p >
 
+		< h2 > distribución geográfica </ h2 >
+		
+                < p > Las yubartas son fácilmente identificables por su complexión robusta, sus largas aletas pectorales, las cuales alcanzan una tercera parte de la longitud del cuerpo y la coloración negra de su región dorsal.9
+
+Las hembras de la especie son más grandes que los machos, siendo una de las pocas especies de mamífero con esta característica (véase dimorfismo sexual).10​ La publicación más confiable con respecto al tamaño de la especie data de 1965, la cual se basó en millas de mediciones realizadas en animales capturados en Australia y la Antártida entre 1949 y 1962. Los animales de cada sexo más largos medidos entonces fue un macho de 14,3 y una hembra de 15,5 m. También se tiene registro menos confiable de otras detectadas en el hemisferio sur que arrojan datos de 17,4 m en un macho y 16,2 m en una hembra, capturados en la Antártida entre 1934-1935.11​ Existen registros más antiguos, por ejemplo uno de 1904, el cual otorga una longitud máxima para los machos de 16,2 my de las hembras en 15,7 m:
+
+</ p >
+	< h2 > biología </ h2 >
+< p > El tamaño forma y proporción del cerebro es similar a lo observado en otros misticetos; mostrando algunas diferencias notables con respecto a los odontocetos en la morfología y estructura celular. Un encéfalo obtenido de una hembra tenía una masa cerebral de 4030 gy un cerebelo proporcionalmente grande de 740 g con un porcentaje del 18 % con respecto a la masa total. Los componentes del sentido del olfato son pequeños, o como es el caso del lóbulo olfativo, están ausentes y es dudoso que posean un sentido del olfato funcional. </ p >
+		
+		< borde de la tabla  = ' 5 ' clase = ' centro ' >
+			< tr >
+				< td > < a  href =' ../index.html ' > < img  src =' ../figuras/casa.png ' 				 alt =' casa ' > < figcaption  style = ' text_align:center ' > Inicio </ figcaption > </ td >
+				< td > < a  href =' ballena.html ' > < img  					src =' ../figuras/ballena.jpg ' alt =' ballena ' 					 > < figcaption  style =' text_align:center ' > Ballena </ figcaption > </ td >
+				< td > < a  href =' narval.html ' > < img  src =' ../figuras/narval.png ' 			 alt =' narval ' > < figcaption  style = ' text_align:center ' > Narval </ figcaption > </ td >
+				
+			</ tr >
+			< tr >
+				< td > < a  href =' delfin.html ' > < img  src =' ../figuras/delfin.jpg ' 				 alt =' delfin ' > < figcaption  							style = ' text_align:center ' > Delfín </ figcaption > </ td >
+				< td > < a  href =' delfinario.html ' > < img  					src =' ../figuras/delfinario.jpeg ' alt =' delfin de rio ' > < figcaption  					style = ' text_align:center ' > Delfín De Río </ figcaption > </ td >
+				< td > < a  href =' orca.html ' > < img  src =' ../figuras/orca.jpg ' 					 alt =' orca ' > < figcaption  style =' text_align:center ' > Orca </ figcaption > </ td >
+			</ tr >
+		</ mesa >
+	</ cuerpo >
